# traccar-cli

./: Cargo.toml  README.md
src/: config.rs  devices.rs  geofences.rs  lib.rs  main.rs  mode.rs  positions.rs  report.rs  session.rs
src/mode/: report_once.rs  serve.rs
