[package]
name = "traccar"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["clock", "now", "serde"] }
ctrlc = "3.5.1"
dirs = "6.0.0"
futures = "0.3.31"
geo = { version = "0.32.0", features = ["serde"] }
native-tls = "0.2.14"
owo-colors = "4.2.3"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = "0.7.18"
wkt = { version = "0.14.0", features = ["serde"] }
zbus = { version= "5.13.2", features = ["tokio"], default-features =false}

[lib]
name = "traccar_lib"
path = "src/lib.rs"

[[bin]]
name="traccar-cli"
path="src/main.rs"
